--- a/assets/styling/scss/comps/_header.scss
+++ b/assets/styling/scss/comps/_header.scss
@@ -2,6 +2,7 @@ body {
   header.header {
     position: fixed;
     width: 100%;
+    max-width: 100vw;
     z-index: 999;
     padding: 8px 0;
 
